--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/seleccion/seleccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/seleccion/seleccion.component.html
@@ -1,125 +1,137 @@
 <section class="container">
   <div class="container text-center">
-    <div class="text-right">
-      <a routerLink="../.." mat-button color="primary" class="btn-regresar">
+    <div class="text-right print-d-none">
+      <a routerLink="../../.." mat-button color="primary" class="btn-regresar">
         <img src="assets/img/icon/regresar.svg" alt="Regresar" />
       </a>
     </div>
-    <h1 class="title-menu--h1">Selección N801801</h1>
-    <p class="info-sub-title">Contratista <b>Construir futuro</b></p>
+    <h1 class="title-menu--h1">
+      Selección
+      <span *ngIf="contrato">{{ contrato.numeroContrato }}</span>
+    </h1>
+    <p class="info-sub-title">
+      Contratista <b *ngIf="contrato"> {{ contrato.contratista }} </b>
+    </p>
   </div>
 
-  <mat-card class="shipping-card var-main-gris">
+  <mat-card class="shipping-card var-main-gris" *ngIf="contrato">
     <mat-card-content>
       <p>
         <strong>
           Número de proceso:
         </strong>
-        SP 0003-2020
+        {{ contrato.numeroProceso }}
       </p>
       <p>
         <strong>
           Fecha de solicitud:
         </strong>
-        20/07/2020
+        {{ contrato.fechaSolicitud | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           Tipo de proceso de selección:
         </strong>
-        Selección privada
+        {{ contrato.tipoProceso }}
       </p>
-      <p>
+      <div class="mb-6px">
         <strong>
           Objeto:
         </strong>
-        <span class="d-block">
-          Mejorar los ambientes para el desarrollo pedagógico de los estudiantes, hecho que se traduce en aspectos
-          motivacionales que llevan a un mejor aprendizaje, al tiempo que asegura la capacidad del sistema para absorber
-          y retener al mayor número de población estudiantil y a largo plazo favorece los índices de desarrollo social
-          de la población.
-        </span>
-      </p>
-      <p>
+        <div [innerHTML]="contrato.objeto">
+        </div>
+      </div>
+      <div class="mb-6px">
         <strong>
           Alcance particular:
         </strong>
-        <span class="d-block">
-          Incrementar en un 45% la capacidad de estructuras educativas en la zona del Caribe que se encuentran con un
-          alto porcentaje de deserción escolar.
-        </span>
-      </p>
+        <div [innerHTML]="contrato.alcanceParticular">
+        </div>
+      </div>
       <p>
         <strong>
           Fecha de apertura:
         </strong>
-        21/07/2020
+        {{ contrato.fechaApertura | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           Fecha de evaluación:
         </strong>
-        15/12/2020
+        {{ contrato.fechaEvaluacion | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           Fecha de adjudicación:
         </strong>
-        03/01/2021
+        {{ contrato.fechaAdjudicacion | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           Fecha de cierre:
         </strong>
-        20/01/2020
+        {{ contrato.fechaCierre | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           ¿Este proceso de selección se realiza distribución del territorio en grupos?:
         </strong>
-        Si
+        <span *ngIf="contrato.tieneDistribucionTerritorioGrupo">
+          Sí
+        </span>
+        <span *ngIf="!contrato.tieneDistribucionTerritorioGrupo">
+          No
+        </span>
       </p>
       <p>
         <strong>
           ¿Cuántos grupos?:
         </strong>
-        2
+        {{ contrato.cuantosGrupos }}
       </p>
-      <p>
+      <p *ngIf="contrato.urlSoporte">
         <strong>
           URL con soporte:
         </strong>
-        one.drive.procesodeseleccionprivada0007
+        <a class="ruta-url max-width-none" [href]="contrato.urlSoporte" target="_blank">
+          {{ contrato.urlSoporte }}
+        </a>
       </p>
       <h2 class="card-subTitle">Grupos</h2>
-      <mat-card-title class="header-card--text sub-text"> 
-        Grupo 1
-      </mat-card-title>
-      <p>
-        <strong>
-          Nombre del grupo:
-        </strong>
-        Proyección Susa
-      </p>
-      <p>
-        <strong>
-          Tipo de presupuesto:
-        </strong>
-        Presupuesto oficial
-      </p>
-      <p>
-        <strong>
-          Valor:
-        </strong>
-        $80.000.000
-      </p>
-      <p>
-        <strong>
-          Plazo en meses:
-        </strong>
-        10
-      </p>
+      <div *ngFor="let grupo of contrato.gruposProcesoSeleccion; index as i">
+        <mat-card-title class="header-card--text sub-text"> 
+          Grupo {{ grupo.grupoNumero }}
+        </mat-card-title>
+        <p>
+          <strong>
+            Nombre del grupo:
+          </strong>
+          {{ grupo.nombreGrupo }}
+        </p>
+        <p>
+          <strong>
+            Tipo de presupuesto:
+          </strong>
+          {{ grupo.tipoPresupuesto }}
+        </p>
+        <p>
+          <strong>
+            Valor:
+          </strong>
+          {{ grupo.valor | currency: 'COP':'symbol-narrow':'.0-0' }}
+        </p>
+        <p>
+          <strong>
+            Plazo en meses:
+          </strong>
+          {{ grupo.plazoMeses }}
+        </p>
+      </div>
     </mat-card-content>
   </mat-card>
 
 </section>
+
+<div class="text-center mt-2em mb-2em print-d-none">
+  <button mat-raised-button color="accent" (click)="downloadPDF()">Descargar</button>
+</div>
